Fix no button on mobile

--- a/public/style.css
+++ b/public/style.css
@@ -270,7 +270,7 @@ label {
     flex-direction:  column;
   }
 
-  .chat-btn-container {
+  .chat-btn {
     display: none;
   }
 }
